--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Юра прав - твой цифровой юридический помощник 
-    Задайте свой вопрос бесплатному помощнику Юре или составьте обращение к юристу" />
-    <title>Юра прав - твой цифровой юридический помощник 
-      Задайте свой вопрос бесплатному помощнику Юре или составьте обращение к юристу</title>
+    <meta name="description" content="Задайте свой вопрос бесплатному помощнику Юре или составьте обращение к юристу" />
+    <title>Юра прав - твой цифровой юридический помощник</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
