--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta 
+        name="description" 
+        content="Карэн теперь CEO" 
+        data-rh="true" 
+    />
+
     <title>Юра прав - твой цифровой юридический помощник</title>
   </head>
   <body>
