--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
         content="Карэн теперь CEO" 
         data-rh="true" 
     />
-
+    <meta name="google-site-verification" content="TohilTXBITb1uv-jgjbHELf5noOStEMIFjj2s7u2Qd0" />
+    <meta name="google-site-verification" content="Ddi_loqgy-_yJqCvlA2rHhnep8_R8x1iEXdePIWD-iQ" />
     <title>Юра прав - твой цифровой юридический помощник</title>
   </head>
   <body>
