--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta 
         name="description" 
-        content="Карэн теперь CEO" 
+        content="Задайте свой вопрос бесплатному помощнику Юре или составьте обращение к юристу" 
         data-rh="true" 
     />
     <meta name="google-site-verification" content="TohilTXBITb1uv-jgjbHELf5noOStEMIFjj2s7u2Qd0" />
-    <meta name="google-site-verification" content="Ddi_loqgy-_yJqCvlA2rHhnep8_R8x1iEXdePIWD-iQ" />
+    <!-- <meta name="google-site-verification" content="Ddi_loqgy-_yJqCvlA2rHhnep8_R8x1iEXdePIWD-iQ" /> -->
     <title>Юра прав - твой цифровой юридический помощник</title>
   </head>
   <body>
