--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
         content="Задайте свой вопрос бесплатному помощнику Юре или составьте обращение к юристу" 
         data-rh="true" 
     />
-    <meta name="google-site-verification" content="TohilTXBITb1uv-jgjbHELf5noOStEMIFjj2s7u2Qd0" />
-    <!-- <meta name="google-site-verification" content="Ddi_loqgy-_yJqCvlA2rHhnep8_R8x1iEXdePIWD-iQ" /> -->
+    <meta name="google-site-verification" content="Ddi_loqgy-_yJqCvlA2rHhnep8_R8x1iEXdePIWD-iQ" />
+    <link rel="icon" type="image/x-icon" href="./favicon-jura.ico">
     <title>Юра прав - твой цифровой юридический помощник</title>
   </head>
   <body>
